CHATS_SIT/force-app/main/default/objects/batchsit_t_sub_pmt_detail__x.object
<CustomObject>
    <description>batchsit$t_sub_pmt_detail</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_sub_pmt_detail</externalName>
    <fields>
        <fullName>amt_act_paid__c</fullName>
        <description>amt_act_paid</description>
        <externalDeveloperName>amt_act_paid</externalDeveloperName>
        <label>Activity Fee Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_copay__c</fullName>
        <description>amt_copay</description>
        <externalDeveloperName>amt_copay</externalDeveloperName>
        <label>Parent Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_rate__c</fullName>
        <description>amt_rate</description>
        <externalDeveloperName>amt_rate</externalDeveloperName>
        <label>Rate Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_reg_paid__c</fullName>
        <description>amt_reg_paid</description>
        <externalDeveloperName>amt_reg_paid</externalDeveloperName>
        <label>Registration Fee Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_total__c</fullName>
        <description>amt_total</description>
        <externalDeveloperName>amt_total</externalDeveloperName>
        <label>Amount Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_slot_paid__c</fullName>
        <externalDeveloperName>amt_slot_paid</externalDeveloperName>
        <label>Slot Contract Amount Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
     <fields>
        <fullName>amt_trans_paid__c</fullName>
        <description>amt_trans_paid</description>
        <externalDeveloperName>amt_trans_paid</externalDeveloperName>
        <label>Transportation Fee Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_level_care__c</fullName>
        <description>cde_level_care</description>
        <externalDeveloperName>cde_level_care</externalDeveloperName>
        <label>Care Level</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_detail_pmt_sub__c</fullName>
        <description>cde_status_detail_pmt_sub</description>
        <externalDeveloperName>cde_status_detail_pmt_sub</externalDeveloperName>
        <label>Sub Payment Detail Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_time_trdnl__c</fullName>
        <description>cde_time_trdnl</description>
        <externalDeveloperName>cde_time_trdnl</externalDeveloperName>
        <label>Unit Paid</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_info_addntl__c</fullName>
        <description>cde_type_info_addntl</description>
        <externalDeveloperName>cde_type_info_addntl</externalDeveloperName>
        <label>Additional Information</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_unit_care__c</fullName>
        <description>cde_type_unit_care</description>
        <externalDeveloperName>cde_type_unit_care</externalDeveloperName>
        <label>Authorized Rate Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_unit_care_actual__c</fullName>
        <description>cde_unit_care_actual</description>
        <externalDeveloperName>cde_unit_care_actual</externalDeveloperName>
        <label>Attendance</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_unit_care_exptd__c</fullName>
        <description>cde_unit_care_exptd</description>
        <externalDeveloperName>cde_unit_care_exptd</externalDeveloperName>
        <label>Authorized Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sub_pmt_detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_care__c</fullName>
        <description>dte_care</description>
        <externalDeveloperName>dte_care</externalDeveloperName>
        <label>Date</label>
        <type>Date</type>
    </fields>
   <fields>
        <fullName>idn_detail_pmt_sub__c</fullName>
        <description>idn_detail_pmt_sub</description>
        <externalDeveloperName>idn_detail_pmt_sub</externalDeveloperName>
        <label>ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_fiscal_rat_fee__c</fullName>
        <label>RAT Fees External Id</label>
        <length>50</length>
        <referenceTargetField>T_FISCAL_RAT_FEES__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_FISCAL_RAT_FEES__c</referenceTo>
        <relationshipLabel>batchdev$t_sub_pmt_detail</relationshipLabel>
        <relationshipName>batchdev_t_sub_pmt_detail</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_pmt_sub__c</fullName>
        <description>idn_pmt_sub</description>
        <externalDeveloperName>idn_pmt_sub</externalDeveloperName>
        <label>Sub Payment ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_sub_pmt__x</referenceTo>
        <relationshipLabel>Sub Payment Detail</relationshipLabel>
        <relationshipName>batchsit_t_sub_pmt_detail</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>ind_adjmt__c</fullName>
        <description>ind_adjmt</description>
        <externalDeveloperName>ind_adjmt</externalDeveloperName>
        <label>Indicator existing Adjustment?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_claim__c</fullName>
        <description>ind_claim</description>
        <externalDeveloperName>ind_claim</externalDeveloperName>
        <label>Existing Claim Adjustment?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_recovery__c</fullName>
        <description>ind_recovery</description>
        <externalDeveloperName>ind_recovery</externalDeveloperName>
        <label>Existing Recovery Adjustment?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_0_36_months_enroll_pmt__c</fullName>
        <description>ind_0_36_months_enroll_pmt</description>
        <externalDeveloperName>ind_0_36_months_enroll_pmt</externalDeveloperName>
        <label>0-36 Months Enrollment Payment</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sub_pmt_detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
     <fields>
        <fullName>idn_prog_fndg__c</fullName>
        <description>idn_prog_fndg</description>
        <externalDeveloperName>idn_prog_fndg</externalDeveloperName>
        <label>Funding Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sub Payment Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Sub Payment Detail</pluralLabel>
</CustomObject>